--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
   <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
-  <!-- Open Graph Meta Tags for SEO and Social Sharing -->
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Tanish Gift of Gratitude" />
   <meta property="og:description" content="Custom handcrafted gifts made with love & gratitude." />
   <meta property="og:image" content="sample1.jpg" />
   <meta property="og:url" content="https://yourdomain.com" />
   <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
 
   <style>
     :root {
@@ -23,7 +32,6 @@
       --accent-color: #cc6699;
       --white: #ffffff;
     }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -31,14 +39,12 @@
       color: var(--text-color);
       transition: background-color 0.3s ease, color 0.3s ease;
     }
-
     body.dark {
       --bg-color: #1e1e1e;
       --text-color: #f5f5f5;
       --header-bg: #333;
       --accent-color: #ff66aa;
     }
-
     header {
       background-color: var(--header-bg);
       padding: 2rem;
@@ -48,29 +54,24 @@
       top: 0;
       z-index: 999;
     }
-
     header img {
       height: 120px;
       margin-bottom: 10px;
     }
-
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
       margin: 0.2rem 0;
     }
-
     nav {
       margin-top: 1rem;
     }
-
     nav a {
       margin: 0 15px;
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
-
     .toggle-mode {
       position: absolute;
       top: 20px;
@@ -82,95 +83,73 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
-    main {
-      padding: 2rem;
-      text-align: center;
-    }
-
-    .cta {
-      margin-top: 2rem;
-    }
-
-    .cta a {
-      background-color: var(--accent-color);
-      color: white;
-      padding: 0.8rem 1.5rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 2rem;
-      margin: 3rem 0;
-    }
-
-    .product {
-      background: var(--white);
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .product img {
-      max-width: 100%;
-      border-radius: 8px;
-      transition: transform 0.3s ease;
-    }
-
-    .product:hover img {
-      transform: scale(1.05);
-    }
-
-    footer {
-      background-color: var(--header-bg);
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-
-    .contact-form {
-      margin-top: 2rem;
-      text-align: left;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .contact-form input, .contact-form textarea {
-      width: 100%;
-      padding: 0.6rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-
-    .contact-form button {
-      background-color: var(--accent-color);
-      color: white;
-      padding: 0.7rem 1.5rem;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .whatsapp-float {
+    .floating-cart {
       position: fixed;
-      bottom: 20px;
+      bottom: 90px;
       right: 20px;
-      background: #25d366;
+      background: var(--accent-color);
       color: white;
+      padding: 0.7rem;
       border-radius: 50%;
-      padding: 15px;
-      font-size: 24px;
-      z-index: 1000;
-      text-decoration: none;
+      font-size: 20px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+    .floating-cart span {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      background: red;
+      border-radius: 50%;
+      font-size: 12px;
+      width: 20px;
+      height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .cart-popup {
+      display: none;
+      position: fixed;
+      right: 20px;
+      bottom: 130px;
+      width: 300px;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      z-index: 1002;
+    }
+    .cart-popup.active {
+      display: block;
+    }
+    .cart-popup h3 {
+      margin-top: 0;
+    }
+    .cart-popup ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      max-height: 200px;
+      overflow-y: auto;
+    }
+    .cart-popup li {
+      margin-bottom: 0.5rem;
+    }
+    .cart-popup .total {
+      font-weight: bold;
+      margin-top: 1rem;
+    }
+    .cart-popup button {
+      background: var(--accent-color);
+      color: white;
+      padding: 0.5rem;
+      width: 100%;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 0.5rem;
     }
   </style>
 </head>
@@ -190,68 +169,75 @@
   <main>
     <h2>Welcome to Our World of Handcrafted Gifts</h2>
     <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-    
-    <div class="cta">
-      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
-    </div>
 
     <section id="products" class="products">
-      <div class="product">
-        <img src="sample1.jpg" alt="Custom Photo Frame" />
-        <h3>Custom Photo Frame</h3>
-        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
-        <p><strong>Price:</strong> ₹499</p>
-        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-      <div class="product">
-        <img src="sample2.jpg" alt="Mini Scrapbook" />
-        <h3>Mini Scrapbook</h3>
-        <p>A pocket-sized book filled with love, perfect for gifting.</p>
-        <p><strong>Price:</strong> ₹299</p>
-        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-      <div class="product">
-        <img src="sample3.jpg" alt="Name Plate Frame" />
-        <h3>Name Plate Frame</h3>
-        <p>Elegant name plate designs with floral or wooden themes.</p>
-        <p><strong>Price:</strong> ₹599</p>
-        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-      <div class="product">
-        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
-        <h3>Anniversary Gift Frame</h3>
-        <p>Celebrate love with a personalized frame for special occasions.</p>
-        <p><strong>Price:</strong> ₹699</p>
-        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Indraja Balla</h2>
-      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
-
-      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
+      <!-- Product cards will go here -->
     </section>
   </main>
 
-  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
+  <!-- Floating Cart Button -->
+  <div class="floating-cart" onclick="toggleCart()">
+    🛒<span id="cart-count">0</span>
+  </div>
 
-  <footer>
-    <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
-  </footer>
+  <!-- Cart Popup -->
+  <div class="cart-popup" id="cart-popup">
+    <h3>Your Cart</h3>
+    <ul id="cart-items"></ul>
+    <div class="total">Total: ₹<span id="cart-total">0</span></div>
+    <button onclick="checkout()">Checkout</button>
+    <button onclick="clearCart()">Clear Cart</button>
+  </div>
 
   <script>
+    let cart = [];
+
     function toggleMode() {
       document.body.classList.toggle("dark");
+    }
+
+    function toggleCart() {
+      document.getElementById('cart-popup').classList.toggle('active');
+    }
+
+    function addToCart(name, price) {
+      const existing = cart.find(item => item.name === name);
+      if (existing) {
+        existing.qty++;
+      } else {
+        cart.push({ name, price, qty: 1 });
+      }
+      updateCart();
+    }
+
+    function updateCart() {
+      const cartItems = document.getElementById('cart-items');
+      const cartCount = document.getElementById('cart-count');
+      const cartTotal = document.getElementById('cart-total');
+
+      cartItems.innerHTML = '';
+      let total = 0;
+      let count = 0;
+
+      cart.forEach(item => {
+        total += item.price * item.qty;
+        count += item.qty;
+        cartItems.innerHTML += `<li>${item.name} x${item.qty} - ₹${item.price * item.qty}</li>`;
+      });
+
+      cartCount.textContent = count;
+      cartTotal.textContent = total;
+    }
+
+    function clearCart() {
+      cart = [];
+      updateCart();
+    }
+
+    function checkout() {
+      alert('Order confirmed! Thank you for shopping with us.');
+      clearCart();
+      toggleCart();
     }
   </script>
 </body>
