--- a/index.html
+++ b/index.html
@@ -15,16 +15,164 @@
   <meta property="og:url" content="https://yourdomain.com" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script>
+  <style>
+    :root {
+      --bg-color: #ffe6f0;
+      --text-color: #4d0039;
+      --header-bg: #ff99cc;
+      --accent-color: #cc6699;
+      --white: #ffffff;
+    }
 
-  <link rel="stylesheet" href="styles.css">
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    body.dark {
+      --bg-color: #1e1e1e;
+      --text-color: #f5f5f5;
+      --header-bg: #333;
+      --accent-color: #ff66aa;
+    }
+
+    header {
+      background-color: var(--header-bg);
+      padding: 2rem;
+      text-align: center;
+      color: white;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+
+    header img {
+      height: 120px;
+      margin-bottom: 10px;
+    }
+
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      margin: 0.2rem 0;
+    }
+
+    nav {
+      margin-top: 1rem;
+    }
+
+    nav a {
+      margin: 0 15px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .toggle-mode {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    main {
+      padding: 2rem;
+      text-align: center;
+    }
+
+    .cta {
+      margin-top: 2rem;
+    }
+
+    .cta a {
+      background-color: var(--accent-color);
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 2rem;
+      margin: 3rem 0;
+    }
+
+    .product {
+      background: var(--white);
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .product img {
+      max-width: 100%;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+
+    .product:hover img {
+      transform: scale(1.05);
+    }
+
+    footer {
+      background-color: var(--header-bg);
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+
+    .contact-form {
+      margin-top: 2rem;
+      text-align: left;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .contact-form input, .contact-form textarea {
+      width: 100%;
+      padding: 0.6rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .contact-form button {
+      background-color: var(--accent-color);
+      color: white;
+      padding: 0.7rem 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      border-radius: 50%;
+      padding: 15px;
+      font-size: 24px;
+      z-index: 1000;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -42,74 +190,56 @@
   <main>
     <h2>Welcome to Our World of Handcrafted Gifts</h2>
     <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-
+    
     <div class="cta">
       <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
     </div>
 
-    <!-- Search and Filter -->
-    <div class="controls">
-      <input type="text" id="searchBar" placeholder="Search products..." onkeyup="filterProducts()">
-      <select id="categoryFilter" onchange="filterProducts()">
-        <option value="all">All</option>
-        <option value="frames">Frames</option>
-        <option value="albums">Albums</option>
-        <option value="gifts">Gifts</option>
-      </select>
-      <select id="sortOptions" onchange="sortProducts()">
-        <option value="default">Sort By</option>
-        <option value="priceLow">Price: Low to High</option>
-        <option value="priceHigh">Price: High to Low</option>
-        <option value="popularity">Popularity</option>
-      </select>
-    </div>
-
-    <!-- Product Section -->
     <section id="products" class="products">
-      <!-- Products will be injected by JS -->
+      <div class="product">
+        <img src="sample1.jpg" alt="Custom Photo Frame" />
+        <h3>Custom Photo Frame</h3>
+        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
+        <p><strong>Price:</strong> ₹499</p>
+        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
+      <div class="product">
+        <img src="sample2.jpg" alt="Mini Scrapbook" />
+        <h3>Mini Scrapbook</h3>
+        <p>A pocket-sized book filled with love, perfect for gifting.</p>
+        <p><strong>Price:</strong> ₹299</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
+      <div class="product">
+        <img src="sample3.jpg" alt="Name Plate Frame" />
+        <h3>Name Plate Frame</h3>
+        <p>Elegant name plate designs with floral or wooden themes.</p>
+        <p><strong>Price:</strong> ₹599</p>
+        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
+      <div class="product">
+        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
+        <h3>Anniversary Gift Frame</h3>
+        <p>Celebrate love with a personalized frame for special occasions.</p>
+        <p><strong>Price:</strong> ₹699</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
     </section>
 
-    <!-- Cart Popup -->
-    <div id="cartPopup" class="cart-popup hidden">
-      <h3>Your Cart</h3>
-      <div id="cartItems"></div>
-      <p>Total: ₹<span id="cartTotal">0</span></p>
-      <button onclick="clearCart()">Clear Cart</button>
-      <button onclick="showOrderSummary()">Proceed to Summary</button>
-    </div>
-
-    <!-- Floating Cart Icon -->
-    <div class="cart-icon" onclick="toggleCartPopup()">
-      🛒 <span id="cartCount">0</span>
-    </div>
-
-    <!-- Order Summary Modal -->
-    <div id="orderSummary" class="modal hidden">
-      <h3>Order Summary</h3>
-      <div id="summaryDetails"></div>
-      <form id="paymentForm">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <input type="text" placeholder="Shipping Address" required>
-        <button type="submit">Confirm Order</button>
-      </form>
-    </div>
-
-    <!-- Feedback Section -->
-    <section id="feedback">
-      <h2>Send Us Your Feedback</h2>
-      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Your Feedback" rows="4" required></textarea>
-        <button type="submit">Submit Feedback</button>
-      </form>
-    </section>
-
-    <!-- Contact Section -->
     <section id="contact">
       <h2>Contact Indraja Balla</h2>
       <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
+
+      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </section>
   </main>
 
@@ -119,6 +249,10 @@
     <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
   </footer>
 
-  <script src="app.js"></script>
+  <script>
+    function toggleMode() {
+      document.body.classList.toggle("dark");
+    }
+  </script>
 </body>
 </html>
