--- a/index.html
+++ b/index.html
@@ -4,26 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tanish Gift of Gratitude</title>
-
-  <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-
-  <!-- Open Graph Meta Tags for SEO and Social Sharing -->
   <meta property="og:title" content="Tanish Gift of Gratitude" />
   <meta property="og:description" content="Custom handcrafted gifts made with love & gratitude." />
   <meta property="og:image" content="sample1.jpg" />
   <meta property="og:url" content="https://yourdomain.com" />
   <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script>
-
   <style>
     :root {
       --bg-color: #ffe6f0;
@@ -32,22 +18,18 @@
       --accent-color: #cc6699;
       --white: #ffffff;
     }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--bg-color);
       color: var(--text-color);
-      transition: background-color 0.3s ease, color 0.3s ease;
     }
-
     body.dark {
       --bg-color: #1e1e1e;
       --text-color: #f5f5f5;
       --header-bg: #333;
       --accent-color: #ff66aa;
     }
-
     header {
       background-color: var(--header-bg);
       padding: 2rem;
@@ -57,261 +39,99 @@
       top: 0;
       z-index: 999;
     }
-
-    header img {
-      height: 120px;
-      margin-bottom: 10px;
-    }
-
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
-      margin: 0.2rem 0;
     }
-
-    nav {
-      margin-top: 1rem;
-    }
-
-    nav a {
-      margin: 0 15px;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .toggle-mode {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background: var(--accent-color);
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    main {
-      padding: 2rem;
+    .filters {
       text-align: center;
+      margin: 1rem;
     }
-
-    .cta {
-      margin-top: 2rem;
+    .filters select, .filters button {
+      padding: 0.5rem;
+      margin: 0.3rem;
     }
-
-    .cta a {
-      background-color: var(--accent-color);
-      color: white;
-      padding: 0.8rem 1.5rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 2rem;
-      margin: 3rem 0;
-    }
-
-    .product {
-      background: var(--white);
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .product img {
-      max-width: 100%;
-      border-radius: 8px;
-      transition: transform 0.3s ease;
-    }
-
-    .product:hover img {
-      transform: scale(1.05);
-    }
-
-    .cart-btn {
-      background-color: var(--accent-color);
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 0.5rem;
-    }
-
-    .cart {
+    .cart-modal {
       position: fixed;
-      top: 20px;
-      right: 20px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background: var(--white);
-      padding: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      padding: 2rem;
+      border-radius: 10px;
       display: none;
-      z-index: 1001;
-    }
-
-    footer {
-      background-color: var(--header-bg);
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-
-    .contact-form {
-      margin-top: 2rem;
-      text-align: left;
+      z-index: 1000;
       max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-
-    .contact-form input, .contact-form textarea {
+    footer {
+      text-align: center;
+      padding: 2rem;
+    }
+    .feedback-form, .payment-section {
+      max-width: 500px;
+      margin: 2rem auto;
+    }
+    .feedback-form input, .feedback-form textarea, .payment-section input {
       width: 100%;
       padding: 0.6rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-
-    .contact-form button {
-      background-color: var(--accent-color);
-      color: white;
-      padding: 0.7rem 1.5rem;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25d366;
-      color: white;
-      border-radius: 50%;
-      padding: 15px;
-      font-size: 24px;
-      z-index: 1000;
-      text-decoration: none;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <button class="toggle-mode" onclick="toggleMode()">🌓</button>
-    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
     <h1>Tanish Gift of Gratitude</h1>
-    <p>Gratitude, Handcrafted with Love</p>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#products">Products</a>
-      <a href="#contact">Contact</a>
-    </nav>
   </header>
-
   <main>
-    <h2>Welcome to Our World of Handcrafted Gifts</h2>
-    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-
-    <div class="cta">
-      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
-    </div>
-
-    <section id="products" class="products">
-      <div class="product">
-        <img src="sample1.jpg" alt="Custom Photo Frame" />
-        <h3>Custom Photo Frame</h3>
-        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
-        <p><strong>Price:</strong> ₹499</p>
-        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
-        <button class="cart-btn" onclick="addToCart('Custom Photo Frame', 499)">Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="sample2.jpg" alt="Mini Scrapbook" />
-        <h3>Mini Scrapbook</h3>
-        <p>A pocket-sized book filled with love, perfect for gifting.</p>
-        <p><strong>Price:</strong> ₹299</p>
-        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
-        <button class="cart-btn" onclick="addToCart('Mini Scrapbook', 299)">Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="sample3.jpg" alt="Name Plate Frame" />
-        <h3>Name Plate Frame</h3>
-        <p>Elegant name plate designs with floral or wooden themes.</p>
-        <p><strong>Price:</strong> ₹599</p>
-        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
-        <button class="cart-btn" onclick="addToCart('Name Plate Frame', 599)">Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
-        <h3>Anniversary Gift Frame</h3>
-        <p>Celebrate love with a personalized frame for special occasions.</p>
-        <p><strong>Price:</strong> ₹699</p>
-        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
-        <button class="cart-btn" onclick="addToCart('Anniversary Gift Frame', 699)">Add to Cart</button>
-      </div>
+    <section class="filters">
+      <select id="categoryFilter">
+        <option value="all">All Categories</option>
+        <option value="frames">Frames</option>
+        <option value="albums">Albums</option>
+        <option value="gifts">Gifts</option>
+      </select>
+      <select id="sortOptions">
+        <option value="price">Sort by Price</option>
+        <option value="popularity">Sort by Popularity</option>
+      </select>
+      <button onclick="clearCart()">Clear Cart</button>
     </section>
 
-    <div class="cart" id="cart"></div>
+    <section id="products" class="products">
+      <!-- Product Cards Go Here -->
+    </section>
 
-    <section id="contact">
-      <h2>Contact Indraja Balla</h2>
-      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
+    <div class="cart-modal" id="cartModal">
+      <h2>Your Cart</h2>
+      <ul id="cartItems"></ul>
+      <p>Total: ₹<span id="cartTotal">0</span></p>
+      <button onclick="confirmOrder()">Order Now</button>
+      <button onclick="toggleCart()">Close</button>
+    </div>
 
-      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
-        <button type="submit">Send Message</button>
+    <section class="payment-section">
+      <h3>Payment Details</h3>
+      <input type="text" placeholder="Cardholder Name">
+      <input type="text" placeholder="Card Number">
+      <input type="text" placeholder="Expiry Date">
+      <input type="text" placeholder="CVV">
+      <button>Pay Now</button>
+    </section>
+
+    <section class="feedback-form">
+      <h3>Leave Us a Feedback</h3>
+      <form>
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea rows="4" placeholder="Your Feedback"></textarea>
+        <button type="submit">Submit</button>
       </form>
     </section>
   </main>
 
-  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
-
   <footer>
-    <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
+    <p>&copy; 2025 Tanish Gift of Gratitude</p>
   </footer>
-
-  <script>
-    function toggleMode() {
-      document.body.classList.toggle("dark");
-    }
-
-    const cart = [];
-    function addToCart(productName, price) {
-      const existing = cart.find(item => item.name === productName);
-      if (existing) {
-        existing.qty += 1;
-      } else {
-        cart.push({ name: productName, price: price, qty: 1 });
-      }
-      renderCart();
-    }
-
-    function renderCart() {
-      const cartBox = document.getElementById('cart');
-      if (cart.length === 0) {
-        cartBox.innerHTML = '<p>Your cart is empty.</p>';
-        cartBox.style.display = 'none';
-        return;
-      }
-      cartBox.innerHTML = '<h3>Your Cart</h3>' + cart.map(item => `
-        <div>
-          ${item.name} - ₹${item.price} x ${item.qty} = ₹${item.price * item.qty}
-        </div>
-      `).join('') + `<p><strong>Total: ₹${cart.reduce((sum, item) => sum + item.price * item.qty, 0)}</strong></p>`;
-      cartBox.style.display = 'block';
-    }
-  </script>
 </body>
 </html>
