--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tanish Gift of Gratitude</title>
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Tanish Gift of Gratitude" />
   <meta property="og:description" content="Custom handcrafted gifts made with love & gratitude." />
   <meta property="og:image" content="sample1.jpg" />
   <meta property="og:url" content="https://yourdomain.com" />
   <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+
   <style>
     :root {
       --bg-color: #ffe6f0;
@@ -23,6 +37,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--bg-color);
       color: var(--text-color);
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
     body.dark {
       --bg-color: #1e1e1e;
@@ -39,17 +54,87 @@
       top: 0;
       z-index: 999;
     }
+    header img {
+      height: 120px;
+      margin-bottom: 10px;
+    }
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
+      margin: 0.2rem 0;
     }
-    .filters {
-      text-align: center;
-      margin: 1rem;
+    nav {
+      margin-top: 1rem;
     }
-    .filters select, .filters button {
+    nav a {
+      margin: 0 15px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .toggle-mode {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .sort-filter {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin: 1rem auto;
+      flex-wrap: wrap;
+    }
+    .sort-filter select, .sort-filter button {
       padding: 0.5rem;
-      margin: 0.3rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 2rem;
+      margin: 2rem 0;
+    }
+    .product {
+      background: var(--white);
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .product img {
+      max-width: 100%;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+    .product:hover img {
+      transform: scale(1.05);
+    }
+    .product button {
+      background-color: var(--accent-color);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 6px;
+      margin-top: 0.5rem;
+      cursor: pointer;
+    }
+    .cart-icon {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      padding: 12px 18px;
+      border-radius: 30px;
+      font-weight: bold;
+      z-index: 1001;
+      cursor: pointer;
     }
     .cart-modal {
       position: fixed;
@@ -59,79 +144,133 @@
       background: var(--white);
       padding: 2rem;
       border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
       display: none;
-      z-index: 1000;
+      z-index: 1002;
+      width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    .cart-modal h3 {
+      margin-top: 0;
+    }
+    .cart-modal ul {
+      list-style: none;
+      padding: 0;
+      text-align: left;
+    }
+    .cart-modal li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0.5rem 0;
+    }
+    .cart-modal .qty-btns {
+      display: flex;
+      gap: 5px;
+    }
+    .cart-modal button {
+      padding: 5px 10px;
+      border: none;
+      border-radius: 4px;
+      background: var(--accent-color);
+      color: white;
+      cursor: pointer;
+    }
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      border-radius: 50%;
+      padding: 15px;
+      font-size: 24px;
+      z-index: 1000;
+      text-decoration: none;
     }
     footer {
       text-align: center;
-      padding: 2rem;
-    }
-    .feedback-form, .payment-section {
-      max-width: 500px;
-      margin: 2rem auto;
-    }
-    .feedback-form input, .feedback-form textarea, .payment-section input {
-      width: 100%;
-      padding: 0.6rem;
-      margin-bottom: 1rem;
+      padding: 2rem 1rem;
     }
   </style>
 </head>
 <body>
   <header>
+    <button class="toggle-mode" onclick="toggleMode()">🌓</button>
+    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
     <h1>Tanish Gift of Gratitude</h1>
+    <p>Gratitude, Handcrafted with Love</p>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
   <main>
-    <section class="filters">
-      <select id="categoryFilter">
-        <option value="all">All Categories</option>
-        <option value="frames">Frames</option>
-        <option value="albums">Albums</option>
-        <option value="gifts">Gifts</option>
-      </select>
-      <select id="sortOptions">
-        <option value="price">Sort by Price</option>
-        <option value="popularity">Sort by Popularity</option>
-      </select>
-      <button onclick="clearCart()">Clear Cart</button>
-    </section>
-
-    <section id="products" class="products">
-      <!-- Product Cards Go Here -->
-    </section>
-
-    <div class="cart-modal" id="cartModal">
-      <h2>Your Cart</h2>
-      <ul id="cartItems"></ul>
-      <p>Total: ₹<span id="cartTotal">0</span></p>
-      <button onclick="confirmOrder()">Order Now</button>
-      <button onclick="toggleCart()">Close</button>
+    <h2>Welcome to Our World of Handcrafted Gifts</h2>
+    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
+    <div class="cta">
+      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
     </div>
 
-    <section class="payment-section">
-      <h3>Payment Details</h3>
-      <input type="text" placeholder="Cardholder Name">
-      <input type="text" placeholder="Card Number">
-      <input type="text" placeholder="Expiry Date">
-      <input type="text" placeholder="CVV">
-      <button>Pay Now</button>
+    <div class="sort-filter">
+      <select id="sortSelect" onchange="sortProducts()">
+        <option value="">Sort by</option>
+        <option value="price">Price</option>
+        <option value="popularity">Popularity</option>
+      </select>
+      <button onclick="filterCategory('all')">All</button>
+      <button onclick="filterCategory('Frames')">Frames</button>
+      <button onclick="filterCategory('Albums')">Albums</button>
+      <button onclick="filterCategory('Gifts')">Gifts</button>
+    </div>
+
+    <section id="products" class="products">
+      <!-- Products will be dynamically injected -->
     </section>
 
-    <section class="feedback-form">
-      <h3>Leave Us a Feedback</h3>
-      <form>
-        <input type="text" placeholder="Your Name">
-        <input type="email" placeholder="Your Email">
-        <textarea rows="4" placeholder="Your Feedback"></textarea>
-        <button type="submit">Submit</button>
+    <section id="payment" style="text-align: center; margin-top: 2rem;">
+      <h2>Payment Options</h2>
+      <p>We accept UPI, Bank Transfer, and Cash on Delivery (for local orders).</p>
+    </section>
+
+    <section id="feedback" style="text-align: center; margin-top: 2rem;">
+      <h2>Feedback</h2>
+      <form class="contact-form" action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Feedback" rows="4" required></textarea>
+        <button type="submit">Submit Feedback</button>
       </form>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Indraja Balla</h2>
+      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Tanish Gift of Gratitude</p>
-  </footer>
+  <div class="cart-icon" onclick="toggleCart()">🛒 (<span id="cart-count">0</span>)</div>
+  <div class="cart-modal" id="cart-modal">
+    <h3>Your Cart</h3>
+    <ul id="cart-items"></ul>
+    <p><strong>Total:</strong> ₹<span id="cart-total">0</span></p>
+    <button onclick="clearCart()">Clear Cart</button>
+    <button onclick="showConfirmation()">Checkout</button>
+    <button onclick="toggleCart()">Close</button>
+  </div>
+
+  <div id="confirmation" class="cart-modal" style="display:none;">
+    <h3>Thank you for your order!</h3>
+    <p>We will contact you soon for payment and shipping details.</p>
+    <button onclick="document.getElementById('confirmation').style.display='none'">Close</button>
+  </div>
+
+  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
+  <footer><p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p></footer>
+
+  <script>
+    // JavaScript will go here (next step)
+  </script>
 </body>
 </html>
